--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
 images/history/*
 images/ideas/*
+lib-cov
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+
+pids
+logs
+results
+build
+
+node_modules
