--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
-  "name": "Festerr",
-  "version": "1.0.0",
-  "description": "Visualise Music Festivals across the UK",
-  "main": "index.js",
+  "name": "festerr",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/JamesAdamHughes/Festerr.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/JamesAdamHughes/Festerr/issues"
-  },
-  "homepage": "https://github.com/JamesAdamHughes/Festerr",
   "dependencies": {
-    "express": "^4.12.4"
+    "body-parser": "~1.12.4",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "express": "~4.12.4",
+    "jade": "~1.9.2",
+    "morgan": "~1.5.3",
+    "serve-favicon": "~2.2.1"
   }
 }
