--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
   "name": "festerr",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node app.js"
-  },
-  "dependencies": {
-    "body-parser": "~1.12.4",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "express": "~4.12.4",
-    "jade": "~1.9.2",
-    "morgan": "~1.5.3",
-    "serve-favicon": "~2.2.1",
-    "requests": "0.1.6"
-  },
+  "version": "1.0.0",
   "description": "Visualising music festivals across the UK",
   "main": "app.js",
+  "dependencies": {
+    "cookie-parser": "^1.3.5",
+    "ejs": "^2.3.1",
+    "body-parser": "^1.12.4",
+    "debug": "^2.2.0",
+    "request": "^2.57.0",
+    "morgan": "^1.5.3",
+    "jade": "^1.9.2",
+    "serve-favicon": "^2.2.1",
+    "express": "^4.12.4"
+  },
   "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/JamesAdamHughes/Festerr.git"
