add inital spotify auth flow

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jade": "^1.9.2",
     "morgan": "^1.5.3",
     "q": "^1.4.1",
+    "querystring": "^0.2.0",
     "request": "^2.69.0",
     "serve-favicon": "^2.2.1"
   },
