--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ejs": "^2.3.1",
     "express": "^4.12.4",
     "jade": "^1.9.2",
+    "markdown-spellcheck": "^0.9.0",
     "morgan": "^1.5.3",
     "q": "^1.4.1",
     "querystring": "^0.2.0",
