--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "request": "^2.69.0",
     "serve-favicon": "^2.2.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^2.3.0",
+    "eslint-config-angular": "^0.5.0",
+    "eslint-plugin-angular": "^1.0.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
