--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "body-parser": "^1.12.4",
+    "client-sessions": "^0.7.0",
     "cookie-parser": "^1.3.5",
     "debug": "^2.2.0",
     "ejs": "^2.3.1",
