--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "debug": "^2.2.0",
     "ejs": "^2.3.1",
     "express": "^4.12.4",
+    "request": "^2.57.0",
+    "sequelize": "^3.19.3",
+    "serve-favicon": "^2.2.1",
+    "sqlite3": "^3.1.1",
     "q": "^1.4.1",
     "querystring": "^0.2.0",
-    "request": "^2.69.0",
-    "serve-favicon": "^2.2.1"
   },
   "devDependencies": {
     "eslint": "^2.3.0",
