--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "serve-favicon": "^2.2.1",
     "sqlite3": "^3.1.1",
     "q": "^1.4.1",
-    "querystring": "^0.2.0",
+    "querystring": "^0.2.0"
   },
   "devDependencies": {
     "eslint": "^2.3.0",
